# pico-freertos-template

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  freertos-test.c
